# venjix

./: .env.sample  .flaskenv  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  requirements.txt  setup.cfg  uwsgi.ini  venjix.py  wsgi.py
.github/workflows/: cicd.yaml
scripts/: ping  touch
venjix/: __init__.py  __main__.py  venjix.py
venjix/scripts/: curl  fail  ping
