[metadata]
name = venjix
version = 0.0.2
description = Venjix is an attack Framework for Security Trainings
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
platforms = any
author = Benjamin Akhras
url = http://github.com/ait-cs-IaaS/venjix/
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GPL
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    black
    flake8
    build
    certifi
    charset-normalizer
    click
    Flask
    Flask-JWT-Extended
    gunicorn
    idna
    itsdangerous
    Jinja2
    MarkupSafe
    PyJWT
    python-dotenv
    python-slugify
    requests
    text-unidecode
    urllib3
    Werkzeug

[flake8]
max-line-length = 142
